[2018/8/31] Added extra brasier types.
[2018/8/31] Added castle lighting mod, with adjustments for compatibility.
[2018/8/30] Added a bunch more nodes to the circular saw.
[2018/8/29] Added some new slabs to the saw, 3 from a recent version of moreblocks, + 1 custom.
[2018/8/29] Made some upgrades to the xban2 mod on this server.
[2018/8/29] Fixed crash issue where the gauges mod would try to give a gauge to a player outside the world bounds.
[2018/8/29] Added safety controls to admin TNT, to prevent blasting unintended targets.
[2018/8/28] Added 5 new circular saw slopes, upgraded the circular saw formspec. Dig and place your saws to see the update.
[2018/8/28] Updated bone placement code in the bones mod.
[2018/8/28] Added admin TNT, to help me clean up stuff and remove cheated builds made by item-dup hackers >:|
[2018/8/27] Fixed coding mistake in the chests core, which made iron and silver locked chests unusable.
[2018/8/27] Updated anticurse chat-filter with a new stop word. (Can't believe I missed that one!)
[2018/8/26] Swapped sharing functionality between iron and silver locked chests. Existing iron locked chests with shares are grandfathered.
[2018/8/26] Reduced size of woodchest inventory from 8*4 to 8*3 slots. Existing wooden chests are grandfathered.
[2018/8/26] Optimized inventory-handling code for when a player dies. Should be much less laggy!
[2018/8/26] Slightly adjusted bone-placement when a player dies.
[2018/8/26] Improved circlestone texture (it needed some depth), added desert circlestone and recipe.
[2018/8/26] Updated chat filter GUI. There are now options to ignore shouts and players that PM you.
[2018/8/26] Firefruit now protects against damage when digging fire nodes.
[2018/8/26] Added buffs & nerfs to player walk/run speed, based on current HP. Keep those hearts full for maximum benefit!
[2018/8/25] Added HUD element showing the current land owner.